--- a/my-nutrition-app/package.json
+++ b/my-nutrition-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
