--- a/my-nutrition-app/package.json
+++ b/my-nutrition-app/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tesseract.js": "^6.0.0"
+    "tailwind-merge": "^3.1.0",
+    "tesseract.js": "^6.0.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
